--- a/responsive.css
+++ b/responsive.css
@@ -40,10 +40,10 @@
         140vw
         60vw
         50vw
-        100vw
+        90vw
         50vw
-        120vw
-        80vw
+        210vw
+        90vw
         80vw
         20vw;
       grid-template-areas:
@@ -163,6 +163,7 @@
     .lounge-verbage strong{
       font-size: 6vw;
       margin: 0 auto;
+      padding-bottom: 3vw;
     }
 
     div[class$="-topo"] {
@@ -173,7 +174,7 @@
       grid-area: vision-text;
       display: grid;
       grid-template-columns: 50% 50%;
-      grid-template-rows: 25% 30% 45%;
+      grid-template-rows: 20% 30% 20% 30%;
 
     }
 
@@ -184,7 +185,8 @@
       display: none;
     }
     .vision div[class^="text"] {
-      margin-left: 8vw;
+      margin-left: 5vw;
+      margin-right: 1vw;
     }
     .title-v, .text-v {
       grid-area: 1 / 1 / 2 / 3;
@@ -193,22 +195,29 @@
       font-size: 6vw;
     }
     .text-v {
-      margin-top: 5vh;
+      margin-top: 10vw;
     }
     .vision strong{
       font-size: 5.5vw;
     }
+    .laptop-img {
+      grid-area: 2 / 1 / 3 / 3;
+      display: block !important;
+      margin: 0;
+      width: 100%;
+      height: auto;
+    }
     .text-gov {
-      grid-area: 2 / 2 / 3 / 3;
-    }
-    .text-startup {
-      grid-area: 2 / 1 / 3 / 2;
-    }
-    .text-corp {
       grid-area: 3 / 2 / 4 / 3;
     }
-    .text-public {
+    .text-startup {
       grid-area: 3 / 1 / 4 / 2;
+    }
+    .text-corp {
+      grid-area: 4 / 2 / 5 / 3;
+    }
+    .text-public {
+      grid-area: 4 / 1 / 5 / 2;
     }
 
 
@@ -223,6 +232,9 @@
       padding: 0;
       margin: 0;
     }
+    .challenge-chevron {
+      width: 6vw;
+    }
 
     .challenge {
       margin: 0;
@@ -233,7 +245,7 @@
     .challenge-text {
       text-align: justify;
       font-size: 5vw;
-      margin: 4vw 8vw 0;
+      margin: 4vw 6vw 0;
     }
     .challenge-link {
       box-shadow: -0.6vh 0.6vh rgb(234,83,24);
@@ -248,7 +260,7 @@
     }
     .challenge-link:hover {
       transition: none;
-      margin: 4vh 20vw;
+      margin: 4vh 15vw;
     }
 
     .challenge-link span {
