navbar fixed to top

--- a/responsive.css
+++ b/responsive.css
@@ -34,9 +34,9 @@
       display: grid;
       grid-template-columns: 100%;
       grid-template-rows:
-        10vw
-        90vw
-        90vw
+        12.5vw
+        71vw
+        100vw
         140vw
         60vw
         50vw
@@ -68,8 +68,13 @@
 
     .logo-img {
         grid-area: logo;
-        margin: 2vw auto 0;
-        width: 10vw;
+        margin-top: 0;
+        padding: 2.5vw 46vw;
+        background-color: white;
+        width: 8vw;
+        position: fixed;
+        z-index: 100;
+        border-bottom: 1px solid lightgrey;
         /* height: ; */
     }
     .topbar {
@@ -99,7 +104,7 @@
       width: 100%;
     }
     .girl-nebula {
-      margin-top: 0;
+      margin-top: 10vw;
       grid-gap: 0;
       grid-area: nebula-text;
       grid-template-rows:
