--- a/responsive.css
+++ b/responsive.css
@@ -1,31 +1,3 @@
-/* @supports (display: grid) {
-  @media screen and (max-width: 736px) and (orientation:landscape) {
-    .site {
-      display: grid;
-      grid-template-columns: 50% 50%;
-      grid-template-rows: 15vh 60% 1fr;
-      grid-template-areas:
-        "title title"
-        "lounge verbage"
-        "footer footer";
-    } */
-
-    /* .lounge {
-      grid-area: lounge;
-      width: 100%;
-    }
-    .lounge-verbage {
-      grid-area: verbage;
-    }
-    .title {
-      grid-area: title;
-    }
-    .foot {
-      grid-area: footer;
-    } */
-  /* } */
-
-/* @supports (display: grid) { */
  @media screen and (max-width: 450px) and (orientation:portrait) {
    /* * {
      margin-top: 0;
@@ -318,4 +290,124 @@
     }
 
   }
-/* } */
+
+@media screen and (max-width: 736px) and (orientation:landscape) {
+
+  .site {
+    grid-template-rows: 15vmin 100vmin 115vmin 75vmin 95vmin 240vmin 1fr 75vmin 15vmin;
+    /* grid-template-rows: 15vh auto; */
+    grid-template-areas:
+      "space-l1 logo navbar navbar navbar navbar navbar navbar navbar space-r1"
+      "space-l2-2 exp-text exp-text exp-text exp-text exp-img exp-img exp-img exp-img space-r1-2"
+      "nebula nebula nebula nebula neb-text neb-text neb-text neb-text neb-text neb-text"
+      "space-l2 quote quote quote quote quote quote quote quote space-r3"
+      "lounge lounge lounge lounge lounge lounge verbage verbage verbage verbage"
+      "space-l3 vision vision vision vision vision vision vision vision space-r4"
+      "space-l4 challenge challenge challenge challenge challenge challenge challenge challenge space-r5"
+      "news news news news news news news news news news"
+      "footer footer footer footer footer footer footer footer footer footer";
+  }
+
+  .topbar, .downarrow, div[class$="-topo"], .lounge-text a, .learn-link, .learn-more, .orange-box, .orange-box2, div[class^="grey-"], div[class^="white-"] {
+    display: none;
+  }
+  p {
+    font-size: 2.25vw;
+    line-height: 1.2;
+  }
+
+  .logo-img {
+      grid-area: 1 / 1 / 2 / 11;
+      margin-top: 0;
+      padding: 1.5vw 48vw;
+      background-color: white;
+      width: 4vw;
+      position: fixed;
+      z-index: 100;
+      border-bottom: 1px solid lightgrey;
+      /* height: ; */
+  }
+
+  .girl-nebula-img {
+    margin-left: 0;
+    width: 95%;
+    transition: none;
+  }
+
+  .girl-nebula {
+    grid-gap: 1vw;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 35% 65%;
+    grid-template-areas:
+    "heading heading"
+    "text1 text2";
+  }
+  .girl-nebula h2 {
+    width: 100%;
+    margin-top: 5vmin;
+    margin-left: 0;
+    font-size: 3vw;
+    line-height: 1.2;
+  }
+
+  .quote-text {
+    font-size: 3vw;
+  }
+
+  .quote-author {
+    font-size: 2vw;
+  }
+
+  .lounge-img {
+    margin-left: 0;
+    transition: none;
+  }
+
+  .vision {
+    padding-top: 0;
+  }
+
+  .title-v {
+    grid-area: 1 / 1 / 2 / 3;
+    text-align: center;
+    margin-top: 10vw;
+  }
+
+  .bking-img {
+    margin-left: 0;
+    transition: none;
+  }
+  .laptop-img {
+    margin-left: 0;
+    transition: none;
+  }
+  .boardroom-img {
+    margin-left: 6vw;
+    transition: none;
+  }
+  .pedestrians-img {
+    margin-left: 7vw;
+    transition: none;
+  }
+  .news {
+    grid-template-columns: 32% 2% 32% 2% 32%;
+    line-height: 1.2;
+  }
+  .news1{
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  .news2{
+    grid-area: 1 / 3 / 2 / 4;
+  }
+  .news3{
+    grid-area: 1 / 5 / 2 / 6;
+  }
+  .news p {
+    font-size: 2vw;
+  }
+  .news strong {
+    font-size: 3vw;
+    line-height: 1.2;
+    margin-right: 2vw;
+  }
+}
